--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
+/* index.html */
 <!DOCTYPE html>
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ens Casem - Albert & Mar</title>
+    <title id="page-title"></title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script defer src="assets/js/translations.js"></script>
+    <script defer src="assets/js/texts.js"></script>
     <script defer src="assets/js/script.js"></script>
 </head>
 <body>
     <header>
         <img src="assets/images/header.jpg" alt="Albert & Mar">
-        <h1 id="title">Ens casem</h1>
-        <nav>
-            <button onclick="changeLanguage('ca')">Català</button>
-            <button onclick="changeLanguage('es')">Español</button>
-            <button onclick="changeLanguage('en')">English</button>
-        </nav>
+        <h1 id="main-title"></h1>
     </header>
     <main>
-        <p id="under-construction">Under Construction</p>
+        <p id="under-construction"></p>
     </main>
 </body>
 </html>
