--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-/* index.html */
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -16,6 +15,14 @@
     </header>
     <main>
         <p id="under-construction"></p>
+        <section>
+            <h2 id="event-date"></h2>
+            <p id="event-location"></p>
+        </section>
+        <section>
+            <h2 id="invitation-message"></h2>
+            <p id="invitation-details"></p>
+        </section>
     </main>
 </body>
 </html>
