--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script defer src="assets/js/script.js"></script>
 </head>
 <body>
+    <audio autoplay loop>
+        <source src="assets/music/background.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <header>
         <img src="assets/images/header.jpg" alt="Albert & Mar">
         <h1 id="main-title"></h1>
@@ -18,6 +22,7 @@
         <section>
             <h2 id="event-date"></h2>
             <p id="event-location"></p>
+            <a id="maps-link" href="https://goo.gl/maps/XYZ" target="_blank">Veure ubicació</a>
         </section>
         <section>
             <h2 id="invitation-message"></h2>
