--- a/gallery.html
+++ b/gallery.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Albert ❤️ Mar - 20.09.2025</title>
+	<title>Mar ❤️ Albert - 20.09.2025</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Casament d'Albert i Mar - 20 de setembre de 2025 a Can Rosich" />
+	<meta name="description" content="Casament d'Mar i Albert - 20 de setembre de 2025 a Can Rosich" />
 	<meta name="keywords" content="casament, Albert, Mar, Can Rosich" />
 	<meta name="author" content="Albert Campano" />
 
@@ -171,7 +171,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12 text-center">
-								<h2>Albert &amp; Mar</h2>
+								<h2>Mar &amp; Albert</h2>
 							</div>
 							<div class="col-md-6 col-md-offset-3 text-center">
 								<p class="fh5co-social-icons">
