--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Albert ❤️ Mar - 20.09.2025</title>
+	<title>Mar ❤️ Albert - 20.09.2025</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Casament d'Albert i Mar - 20 de setembre de 2025 a Can Rosich" />
+	<meta name="description" content="Casament d'Mar i Albert - 20 de setembre de 2025 a Can Rosich" />
 	<meta name="keywords" content="casament, Albert, Mar, Can Rosich" />
 	<meta name="author" content="Albert Campano" />
 
@@ -54,7 +54,7 @@
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
 									<h1>El casament de l'any</h1>
-									<h2>Albert &amp; Mar</h2>
+									<h2>Mar &amp; Albert</h2>
 									<p><span>20.09.2025</span></p>
 								</div>
 							</div>
@@ -100,20 +100,20 @@
 				<div class="row row-bottom-padded-md animate-box">
 					<div class="col-md-6 col-md-offset-3 text-center">
 						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
-							<img src="images/novio.jpg" class="img-responsive" alt="Foto Albert Campano">
-							<h3>Albert Campano</h3>
+							<img src="images/bride.jpg" class="img-responsive" alt="Foto Mar Peters">
+							<h3>Mar Peters</h3>
 						</div>
 						<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><i class="icon-heart"></i></h2></div>
 						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
-							<img src="images/bride.jpg" class="img-responsive" alt="Foto Mar Peters">
-							<h3>Mar Peters</h3>
+							<img src="images/novio.jpg" class="img-responsive" alt="Foto Albert Campano">
+							<h3>Albert Campano</h3>
 						</div>
 					</div>
 				</div>
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="col-md-12 text-center heading-section">
-							<h2>Es casaran</h2>
+							<h2>Es casen</h2>
 							<p><strong>el 20 de setembre de 2025 &mdash; Santa Susanna, Barcelona</strong></p>
 						</div>
 					</div>
@@ -171,7 +171,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<h2>Albert &amp; Mar</h2>
+							<h2>Mar &amp; Albert</h2>
 						</div>
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
