--- a/dresscode.html
+++ b/dresscode.html
@@ -54,7 +54,7 @@
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
 									<h1>Test</h1>
-									<h2>Quan &amp; on</h2>
+									<h2>Mar &amp; Albert</h2>
 								</div>
 							</div>
 						</div>
@@ -86,45 +86,21 @@
 				</div>
 			</div>
 		</header>
+
 		<!-- end:header-top -->
 		
 
-		<div id="fh5co-when-where" class="fh5co-section-gray">
+		<div id="fh5co-groom-bride">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h2>Quan &amp; On</h2>
-					</div>
-				</div>
-				<div class="row row-bottom-padded-md">
-					<div class="wedding-events">
-						<div class="ceremony-bg" style="background-image: url(images/wed-party.jpg);"></div>
-						<div class="desc">
-							<h3>Wedding Party</h3>
-							<p><strong>Dissabte, 20 de setembre de 2025, 19:00 h - 00:00 h @ Can Rosich</strong></p>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div id="map" class="fh5co-map">
-							<iframe 
-								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.3932066856223!2d2.6934431765928646!3d41.64724567983566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bb395500c6db1b%3A0xa0b3fdfd279ba645!2sCan%20Rosich!5e0!3m2!1sen!2ses!4v1739035115743!5m2!1sen!2ses"
-								width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-							</iframe>
-						</div>
-						<br>
-						<a href="https://www.google.com/maps?q=41.647232,2.696016" target="_blank" class="btn btn-primary">
-							📍 Obrir a Google Maps
-						</a>
+						<h2>Under construction</h2>
 					</div>
 				</div>
 			</div>
 		</div>
 
 
-			
 			<footer>
 				<div id="footer">
 					<div class="container">
@@ -154,9 +130,8 @@
 	
 		</div>
 		<!-- END fh5co-wrapper -->
-	
+
 		<!-- jQuery -->
 		<script src="dist/scripts.min.js"></script>
 		</body>
 	</html>
-
