--- a/index.html
+++ b/index.html
@@ -73,20 +73,15 @@
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active"><a href="index.html" >Home</a></li>
+							<li><a href="when-where.html">Quan &amp; on</a></li>
+							<li><a href="confirmation.html">Confirmació</a></li>
 							<li>
-								<a href="groom-bride.html" class="fh5co-sub-ddown">Prova</a>
+								<a href="groom-bride.html" class="fh5co-sub-ddown">Altres</a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="https://freehtml5.co/wedding-free-html5-bootstrap-template-for-wedding-websites/">Menu 1</a></li>
-									<li><a href="https://freehtml5.co/marble-free-html5-bootstrap-template-for-portfolio-or-multi-purpose-websites/">Menu 2</a></li>
-									<li><a href="https://freehtml5.co/tasty-free-bootstrap-html5-template-for-restaurant-websites/">Menu 3</a></li>
-									<li><a href="https://freehtml5.co/education-free-html5-bootstrap-template-elearning-school-websites/">Menu 4</a></li>
-									<li><a href="https://freehtml5.co/words-free-html5-bootstrap-template-multi-purpose/">Menu 5</a></li>
+									<li><a href="timeline.html">Timeline</a></li>
+									<li><a href="dresscode.html">Dress code</a></li>
 								</ul>
 							</li>
-							<li><a href="when-where.html">Quan &amp; on</a></li>
-							<li><a href="guest.html">xyz_acb</a></li>
-							<li><a href="gallery.html">Fotos</a></li>
-							<li><a href="blog.html">Blog</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -129,39 +124,6 @@
 						<span id="minutes"></span>
 						<span id="seconds"></span>
 					</p>
-				</div>
-			</div>
-		</div>
-
-		<div id="fh5co-started" style="background-image:url(images/cover_bg_2.jpg);" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-			<div class="container">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h2>Vindràs?</h2>
-						<p>Omple el formulari per saber que vindras. Gracies.
-					</div>
-				</div>
-				<div class="row animate-box">
-					<div class="col-md-10 col-md-offset-1">
-						<form class="form-inline">
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="name" class="sr-only">Nom</label>
-									<input type="name" class="form-control" id="name" placeholder="Nom">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<div class="form-group">
-									<label for="email" class="sr-only">Correu</label>
-									<input type="email" class="form-control" id="email" placeholder="Correu">
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<button type="submit" class="btn btn-primary btn-block">Asistire</button>
-							</div>
-						</form>
-					</div>
 				</div>
 			</div>
 		</div>
