feat: change font

--- a/dresscode.html
+++ b/dresscode.html
@@ -15,10 +15,10 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
-	
-	<link href="https://fonts.googleapis.com/css?family=Montez" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
-	
+
+	<link href="https://db.onlinewebfonts.com/c/b4d584ed0e53ba94a815f817690faab2?family=Brittany+Signature" rel="stylesheet">
+	<link href="https://db.onlinewebfonts.com/c/351c65048c69125fa2f3421ec197545d?family=Aileron" rel="stylesheet">
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="css/superfish.css">
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	
+
 	<link rel="stylesheet" href="css/style.css">
 
 
@@ -44,7 +44,7 @@
 	<body>
 		<div id="fh5co-wrapper">
 		<div id="fh5co-page">
-	
+
 		<div class="fh5co-hero" data-section="home">
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
@@ -88,7 +88,7 @@
 		</header>
 
 		<!-- end:header-top -->
-		
+
 
 		<div id="fh5co-groom-bride">
 			<div class="container">
@@ -122,12 +122,12 @@
 					</div>
 				</div>
 			</footer>
-	
-		
-	
+
+
+
 		</div>
 		<!-- END fh5co-page -->
-	
+
 		</div>
 		<!-- END fh5co-wrapper -->
 
