--- a/when-where.html
+++ b/when-where.html
@@ -15,10 +15,10 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
-	
-	<link href="https://fonts.googleapis.com/css?family=Montez" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
-	
+
+	<link href="https://db.onlinewebfonts.com/c/b4d584ed0e53ba94a815f817690faab2?family=Brittany+Signature" rel="stylesheet">
+	<link href="https://db.onlinewebfonts.com/c/351c65048c69125fa2f3421ec197545d?family=Aileron" rel="stylesheet">
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="css/superfish.css">
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	
+
 	<link rel="stylesheet" href="css/style.css">
 
 
@@ -44,7 +44,7 @@
 	<body>
 		<div id="fh5co-wrapper">
 		<div id="fh5co-page">
-	
+
 		<div class="fh5co-hero" data-section="home">
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
@@ -87,7 +87,7 @@
 			</div>
 		</header>
 		<!-- end:header-top -->
-		
+
 
 		<div id="fh5co-when-where" class="fh5co-section-gray">
 			<div class="container">
@@ -109,7 +109,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div id="map" class="fh5co-map">
-							<iframe 
+							<iframe
 								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.3932066856223!2d2.6934431765928646!3d41.64724567983566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bb395500c6db1b%3A0xa0b3fdfd279ba645!2sCan%20Rosich!5e0!3m2!1sen!2ses!4v1739035115743!5m2!1sen!2ses"
 								width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
 							</iframe>
@@ -124,7 +124,7 @@
 		</div>
 
 
-			
+
 			<footer>
 				<div id="footer">
 					<div class="container">
@@ -146,15 +146,15 @@
 					</div>
 				</div>
 			</footer>
-	
-		
-	
+
+
+
 		</div>
 		<!-- END fh5co-page -->
-	
+
 		</div>
 		<!-- END fh5co-wrapper -->
-	
+
 		<!-- jQuery -->
 		<script src="dist/scripts.min.js"></script>
 		</body>
