--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
-									<h1>El casament de l'any</h1>
 									<h2>Mar &amp; Albert</h2>
 									<p><span>20.09.2025</span></p>
 								</div>
@@ -63,33 +62,6 @@
 				</div>
 			</div>
 		</div>
-
-		<header id="fh5co-header-section" class="sticky-banner">
-			<div class="container">
-				<div class="nav-header">
-					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html"></a></h1>
-					<!-- START #fh5co-menu-wrap -->
-					<nav id="fh5co-menu-wrap" role="navigation">
-						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li class="active"><a href="index.html" >Inici</a></li>
-							<li><a href="#fh5co-when-where">Quan &amp; on</a></li>
-							<li><a href="#fh5co-started">Confirmació</a></li>
-							<!--
-							<li>
-								<a href="index.html" class="fh5co-sub-ddown">Altres</a>
-								<ul class="fh5co-sub-menu">
-									<li><a href="timeline.html">Timeline</a></li>
-									<li><a href="dresscode.html">Dress code</a></li>
-								</ul>
-							</li>
-							-->
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-
 		<!-- end:header-top -->
 
 		<div id="fh5co-countdown">
@@ -105,74 +77,83 @@
 			</div>
 		</div>
 
-		<div id="fh5co-couple" class="fh5co-section-gray">
+		<div id="fh5co-couple" class="fh5co-section-green">
 			<div class="container">
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2">
+						<div class="col-md-12 text-center heading-section">
+							<h2>Ens casem!</h2>
+							<p>
+								Després de 10 anys caminant junts, compartint somnis, riures, moments difícils i infinites aventures, hem decidit fer el següent pas. Ens fa molta il·lusió anunciar que ens casem i encara més poder compartir una de les dates més especials de les nostres vides amb vosaltres.
+							</p>
+							<p>
+								Cada pas d’aquest camí ha estat millor amb la vostra companyia, i no podem imaginar aquest dia tan únic i inoblidable sense vosaltres al nostre costat.
+							</p>
+						</div>
+					</div>
+				</div>
 				<div class="row row-bottom-padded-md animate-box">
 					<div class="col-md-6 col-md-offset-3 text-center">
 						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 							<img src="images/bride.jpg" class="img-responsive" alt="Foto Mar Peters">
 							<h3>Mar Peters</h3>
 						</div>
-						<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><i class="icon-heart"></i></h2></div>
+						<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h1 class="amp-center">&</h1></div>
 						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 							<img src="images/novio.jpg" class="img-responsive" alt="Foto Albert Campano">
 							<h3>Albert Campano</h3>
 						</div>
 					</div>
 				</div>
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2">
-						<div class="col-md-12 text-center heading-section">
-							<h2>Es casen</h2>
-							<p><strong>el 20 de setembre de 2025 &mdash; Santa Susanna, Barcelona</strong></p>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 
-		<div id="fh5co-when-where" class="fh5co-section-gray">
+		<div id="fh5co-when-where" class="fh5co-section-green-2">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h2>Quan &amp; On</h2>
+						<h2>L'escenari del nostre si</h2>
 					</div>
 				</div>
 				<div class="row row-bottom-padded-md">
 					<div class="wedding-events">
 						<div class="ceremony-bg" style="background-image: url(images/wed-party.jpg);"></div>
 						<div class="desc">
-							<h3>Wedding Party</h3>
-							<p><strong>Dissabte, 20 de setembre de 2025, 19:00 h - 00:00 h @ Can Rosich</strong></p>
+							<h3>Can Rosich</h3>
+							<p><strong>Dissabte, 20 de setembre de 2025, 17:30 h</strong></p>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<a href="https://www.google.com/maps?q=41.647232,2.696016" target="_blank" class="btn btn-primary">
+								📍 Obrir a Google Maps
+							</a>
 						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div id="map" class="fh5co-map">
-							<iframe
-								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.3932066856223!2d2.6934431765928646!3d41.64724567983566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bb395500c6db1b%3A0xa0b3fdfd279ba645!2sCan%20Rosich!5e0!3m2!1sen!2ses!4v1739035115743!5m2!1sen!2ses"
-								width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-							</iframe>
-						</div>
-						<br>
-						<a href="https://www.google.com/maps?q=41.647232,2.696016" target="_blank" class="btn btn-primary">
-							📍 Obrir a Google Maps
-						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="fh5co-confirmation" class="fh5co-section-gray">
+		<div id="fh5co-remuneration" class="fh5co-section-green">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h2>Confirmació d'Assistència</h2>
-						<p>Si us plau, fes clic al botó per confirmar la teva assistència.</p>
+						<h2>El nostre viatge inoblidable</h2>
+						<p>La vostra presència al nostre casament és el millor regal que podríem desitjar.</p>
+						<p>Si voleu fer-nos un obsequi, podeu contribuir amb una petita aportació econòmica a través d’aquest número de compte i ajudar-nos a tenir el millor viatge de noces que puguem imaginar:</p>
+						<p>ES02 0081 0102 8200 0232 0441</p>
+						<p>Moltes gràcies per compartir aquest dia tan especial amb nosaltres!</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<div id="fh5co-confirmation" class="fh5co-section-green-2">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+						<h2>Us hi esperem!</h2>
+						<p>Confirmeu la vostra assistència amb un clic!</p>
 						<br>
-						<a href="https://docs.google.com/forms/d/e/1FAIpQLSdynYqK0GkwTdpeOFH-tlO86FZCAkB0r9IkjWgCPSa_8FplIg/viewform"
+						<a href="https://forms.gle/GJQCtpMoXDrnsypn6"
 						   target="_blank" class="btn btn-primary">
 							✍️ Omplir Formulari
 						</a>
@@ -181,38 +162,16 @@
 			</div>
 		</div>
 
-		<div id="fh5co-started" style="background-image:url(images/cover_bg_2.jpg);" data-stellar-background-ratio="0.5">
-			<div class="overlay"></div>
-				<div class="container">
-					<div class="row animate-box">
-						<div class="col-md-8 col-md-offset-2 text-center heading-section">
-							<h2>Vindràs?</h2>
-							<p>Omple el formulari per saber que vindras. Gracies.
-						</div>
-					</div>
-					<div class="row animate-box">
-						<div class="col-md-10 col-md-offset-1">
-							<form class="form-inline">
-								<div class="col-md-4 col-sm-4">
-									<div class="form-group">
-										<label for="name" class="sr-only">Nom</label>
-										<input type="name" class="form-control" id="name" placeholder="Nom">
-									</div>
-								</div>
-								<div class="col-md-4 col-sm-4">
-									<div class="form-group">
-										<label for="email" class="sr-only">Correu</label>
-										<input type="email" class="form-control" id="email" placeholder="Correu">
-									</div>
-								</div>
-								<div class="col-md-4 col-sm-4">
-									<button type="submit" class="btn btn-primary btn-block">Asistire</button>
-								</div>
-							</form>
-						</div>
+		<div id="fh5co-extra" class="fh5co-section-green">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+						<h2>Informació addicional</h2>
+						<p>Si necessiteu allotjament per a la vostra estada durant el nostre casament, no dubteu a contactar amb nosaltres! Estarem encantats d'ajudar-vos a trobar la millor opció d'allotjament segons les vostres necessitats i preferències. Ens agradaria que tots els nostres convidats gaudissin d'una estada còmoda i agradable, així que no dubteu a escriure'ns per a qualsevol consulta o recomanació.</p>
 					</div>
 				</div>
 			</div>
+		</div>
 
 
 		<footer>
@@ -223,14 +182,7 @@
 							<h2>Mar &amp; Albert</h2>
 						</div>
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
-							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+							<p>T'esperem!</p>
 						</div>
 					</div>
 				</div>
