--- a/when-where.html
+++ b/when-where.html
@@ -89,7 +89,7 @@
 		<!-- end:header-top -->
 
 
-		<div id="fh5co-when-where" class="fh5co-section-gray">
+		<div id="fh5co-when-where" class="fh5co-section-green">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
