feat: change description Can Rosich

--- a/es.html
+++ b/es.html
@@ -107,6 +107,7 @@
 				<div class="desc">
 					<h3>Can Rosich</h3>
 					<p><strong>Sábado, 20 de septiembre de 2025, 17:30 h</strong></p>
+					<p>Can Rosich es un lugar lleno de recuerdos y emociones para nosotros. Aquí hemos vivido muchos momentos especiales. Nos hace una ilusión inmensa poder compartir la celebración de nuestro enlace en un lugar que significa tanto para nosotros.</p>
 					<a href="https://www.google.com/maps?q=41.647232,2.696016" target="_blank" class="btn btn-primary">
 						📍 Abrir en Google Maps
 					</a>
