--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="desc">
 							<h3>Can Rosich</h3>
 							<p><strong>Dissabte, 20 de setembre de 2025, 17:30 h</strong></p>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>Can Rosich és un lloc ple de records i emocions per a nosaltres. Aquí hi hem viscut molts moments especials. Ens fa una il·lusió immensa poder compartir-hi la celebració del nostre enllaç, en un lloc que significa tant per a nosaltres.</p>
 							<a href="https://www.google.com/maps?q=41.647232,2.696016" target="_blank" class="btn btn-primary">
 								📍 Obrir a Google Maps
 							</a>
